third_party/rust/cxx/v1/crate/tests/ui/opaque_not_sized.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
 --> tests/ui/opaque_not_sized.rs:4:14
  |
4 |         type TypeR;
  |              ^^^^^ doesn't have a size known at compile-time
  |
  = help: within `TypeR`, the trait `Sized` is not implemented for `str`
note: required because it appears within the type `TypeR`
 --> tests/ui/opaque_not_sized.rs:8:8
  |
8 | struct TypeR(str);
  |        ^^^^^
note: required by a bound in `__AssertSized`
 --> tests/ui/opaque_not_sized.rs:4:9
  |
4 |         type TypeR;
  |         ^^^^^^^^^^^ required by this bound in `__AssertSized`
