third_party/rust/cxx/v1/crate/tests/ui/opaque_not_sized.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        type TypeR;
    }
}

struct TypeR(str);

fn main() {}
